--- a/style.css
+++ b/style.css
@@ -1,65 +1,43 @@
-.title {
-  font-size: 40px;
-  font-family: Helvetica;
-  color: white;
-  text-align: center;
-  font-weight: bold;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.description {
-  font-size: 20px;
-  font-family: Helvetica;
-  color: white;
-  font-weight: bold;
-}
-.gradiente-introduccion {
-  background-image: linear-gradient(-35deg, #0394a3, #b96ec9, #c66b96);
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  display: block;
-  border-radius: 10px;
-  overflow: hidden;
-  width: auto;
-  height: auto;
-  margin: 50px;
-  font-size: 20px;
-  border: 2px solid white;
-  padding: 10px;
-}
-
 body {
-  background-image: linear-gradient(30deg, #1a838e, #4f0c3e, #6e2447);
+  background-image: linear-gradient(35deg, #0394a3, #f5e2f9, #c66b96);
 }
-.survey-form {
-  background-image: linear-gradient(70deg, #30b9c6, #b43895);
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-  position: relative;
-  display: block;
-  border-radius: 10px;
-  overflow: hidden;
-  width: auto;
+.formstyle {
+  width: 400px;
   height: auto;
-  margin: 40px;
-  font-size: 20px;
-  border: 2px solid white;
+  background-color: #24303c;
+  padding: 20px;
+  margin: auto;
+  border-radius: 7px;
+  color: aliceblue;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.titulo {
+  margin-bottom: 30px;
+}
+.nombre-email-edad {
+  display: flex;
+  flex-direction: column;
+
+}
+.form1 {
+  width: 100%;
   padding: 10px;
-  padding-left: 400px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  background-color: #24303c;
+  color: aliceblue
 }
-.email-name-text {
-  font-size: 16px;
-  font-family: Helvetica;
-  color: white;
-  font-weight: bold;
-  text-align: center;
-  width: 400px;
+.casillas {
+  display: flex;
+  flex-direction: column;
 }
-.opciones {
-  font-size: 16px;
-  font-family: Helvetica;
-  color: black;
-  text-align: center;
-  font-weight: bold;
-  width: 400px;
+.radio {
+  display: flex;
+  flex-direction: row;
 }
