--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
   border-radius: 7px;
   color: aliceblue;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  box-shadow: 7px 13px 37px #000000;
 }
 .titulo {
   margin-bottom: 30px;
@@ -22,7 +24,6 @@ body {
 .nombre-email-edad {
   display: flex;
   flex-direction: column;
-
 }
 .form1 {
   width: 100%;
@@ -37,7 +38,43 @@ body {
   display: flex;
   flex-direction: column;
 }
+.genero {
+  width: 100%;
+  margin: 10px;
+}
+#email, #number, #name, #dropdown {
+  border: 1px solid #0394a3;
+}
 .radio {
+  margin: 10px;
+}
+.checkbox {
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+}
+.filas {
   display: flex;
   flex-direction: row;
+}
+#textarea {
+  width: 100%;
+  height: 70px;
+  background-color: #24303c;
+  border: 1px solid #0394a3;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border-radius: 4px;
+}
+#submit, #reset {
+  width: 80px;
+  height: 20px;
+  background-color: #0394a3;
+  color: aliceblue;
+  border: aliceblue;
+  border-radius: 3px;
+}
+#submit:hover, #reset:hover {
+  background-color: #97f1f5;
+  color: #24303c;
 }
